Read and write api has been seperated from main controller, very basic ui has been added,writeservice has been seperated.